--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
   </nav>
 
   <section id="about">
-    <h2>Vì sao chọn Pơ Lang?</h2>
+    <h2>
+  <a href="blog/blog-po-lang-gieo-sac.html" class="highlight-link">
+    Pơ lang – Gieo sắc từ Bơ Việt, hòa nhịp cùng văn hóa bản địa
+  </a>
+</h2>
     <p class="fn-animate">
-      Pơ Lang kể câu chuyện về quả bơ tươi vùng Tây Nguyên, kết hợp giá trị địa phương, cam kết mỹ phẩm sạch – lành tính
-      cho làn da phụ nữ Việt.
+      Pơ Lang định nghĩa lại vẻ đẹp tự nhiên bằng cách "gieo sắc" từ bơ Việt thuần khiết và những nông sản bản địa quý giá. Mỗi sản phẩm không chỉ mang lại hiệu quả vượt trội mà còn là câu chuyện về văn hóa, lối sống và bản sắc chân thật của Tây Nguyên
     </p>
   </section>
 
